# Zcode

./: .appveyor.yml  .gitignore  .travis  .travis.yml  CMakeLists.txt  README.md  README.rst  environment.yml
Zcode/: main.cpp
Zcode/tree/: AllSet2One.hpp  definitions.hpp  direction.hpp  node.hpp  zcurve.hpp
Zcode/tree/node/: cell.hpp  definitions.hpp  direction.hpp  family.hpp  neighbor.hpp  node.hpp  node_crtp.hpp  operator.hpp  refine.hpp  util.hpp  zcurve.hpp  znode.hpp
Zcode/tree/slot/: cache.hpp  pack.hpp  slot.hpp  slotCollection.hpp
cmake/: FindTBB.cmake
doc/: Doxyfile  Makefile  environment.yml  make.bat
doc/source/: conf.py  index.rst
doc/source/api/: node.rst  slot.rst  slotCollection.rst
notebooks/: node.ipynb
test/: CMakeLists.txt  downloadGTest.cmake.in  node.cpp  slot.cpp  test_cellpack.cpp  test_node.cpp  test_slot.cpp  test_slotCollection.cpp
